[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['HtmlCanvasElement', 'CanvasRenderingContext2d', 'Window', 'Document'] }
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }